--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* =================================================================== 
+over/* =================================================================== 
  *
  *  Infinity v1.0 Main Stylesheet
  *  01-02-2017
@@ -1509,7 +1509,7 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   background-color: #151515;
-  background-image: url(../images/hero-bg.jpg);
+/*  background-image: url(../images/hero-bg.jpg);*/
   background-repeat: no-repeat;
   background-position: center 30%;
   -webkit-background-size: cover;
