--- a/css/main.css
+++ b/css/main.css
@@ -1886,7 +1886,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
  * ------------------------------------------------------------------- */
 #services {
   background-color: #19191b;
-  background-image: url(../images/services-bg.jpg);
+  /*background-image: url(../images/services-bg.jpg);*/
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover;
@@ -2272,7 +2272,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.8rem;
   line-height: 1.667;
-  color: rgba(242, 242, 242, 0.5);
+  color: #b6b6b6;
   text-transform: uppercase;
   letter-spacing: .3rem;
   position: relative;
