--- a/css/main.css
+++ b/css/main.css
@@ -471,7 +471,7 @@ td:last-child {
 }
 
 .pace .pace-progress {
-  background: #f9a828;
+  background: #f9a828; /*color of bar*/
   position: fixed;
   z-index: 900;
   top: 0;
@@ -499,21 +499,6 @@ td:last-child {
 
 .no-js #preloader, .oldie #preloader {
   display: none;
-}
-
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-left: -30px;
-  margin-top: -30px;
-  padding: 0;
-  background-color: #f9a828;
-  border-radius: 100%;
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-  animation: sk-scaleout 1.0s infinite ease-in-out;
 }
 
 @-webkit-keyframes sk-scaleout {
