--- a/css/main.css
+++ b/css/main.css
@@ -1231,8 +1231,8 @@ header .row {
  * ------------------------------------------------------------------- */
 header .header-logo {
   position: absolute;
-  left: 32px;
-  top: 42px;
+  left: 27px;
+  top: 25px;
   -moz-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
@@ -1245,10 +1245,10 @@ header .header-logo a {
   padding: 0;
   outline: 0;
   border: none;
-  width: 57px;
-  height: 27px;
-  background: url("../images/logo.png") no-repeat center;
-  background-size: 57px 27px;
+  width: 190px;
+  height: 64px;
+  background: url("../images/logo.svg") no-repeat center;
+/*  background-size: 150px 51px;*/
   font: 0/0 a;
   text-shadow: none;
   color: transparent;
@@ -1282,7 +1282,7 @@ header .header-logo a {
   transition: all 0.3s ease-in-out;
 }
 #header-menu-trigger.opaque {
-  background-color: #000000;
+  background-color: #ebb024;
 }
 #header-menu-trigger.opaque .header-menu-text {
   background-color: #000000;
@@ -1551,8 +1551,8 @@ header .header-logo a {
   margin: 4.8rem 0 0 0;
 }
 .home-content-tablecell .more .button {
-  border-color: #FFFFFF;
-  color: #FFFFFF;
+  border-color: #ebb024;
+  color: #ebb024;
 }
 
 /* home social-list */
@@ -1914,11 +1914,12 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   text-align: center;
 }
 #services .services-list .service-item {
-  margin-bottom: 3rem;
+  margin-bottom: 8rem;
   padding: 0 50px;
 }
 #services .services-list .service-item p {
-  color: rgba(242, 242, 242, 0.5);
+  color: rgba(242, 242, 242, 0.8);
+  font-size: 2.0rem;
 }
 #services .services-list .icon {
   display: inline-block;
@@ -1929,7 +1930,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   color: #f9a828;
 }
 #services .services-list .h05 {
-  font-size: 1.7rem;
+  font-size: 2.4rem;
   line-height: 1.765;
   color: #FFFFFF;
   margin-bottom: 3rem;
@@ -2511,7 +2512,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   color: rgba(242, 242, 242, 0.5);
 }
 #contact .section-intro p.lead {
-  color: rgba(242, 242, 242, 0.4);
+  color: rgba(242, 242, 242, 0.7);
 }
 
 .contact-content {
