--- a/css/main.css
+++ b/css/main.css
@@ -1231,8 +1231,8 @@ header .row {
  * ------------------------------------------------------------------- */
 header .header-logo {
   position: absolute;
-  left: 1px;
-  top: 9px;
+  left: 20px;
+  top: 15px;
   -moz-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
@@ -1245,9 +1245,9 @@ header .header-logo a {
   padding: 0;
   outline: 0;
   border: none;
-  width: 420px;
-  height: 96px;
-  background: url("../images/logo.svg") no-repeat center;
+  width: 440px;
+  height: 80px;
+  background: url("../images/fully.svg") no-repeat center;
 /*  background-size: 150px 51px;*/
   font: 0/0 a;
   text-shadow: none;
@@ -1258,6 +1258,35 @@ header .header-logo a {
   -ms-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+/*.main-icon {
+  top: 9px;
+  height: 90px;
+  margin-top: 20px;
+  background: url("../images/icon.svg") no-repeat center;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+ .main-icon a {
+  display: block;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: none;
+  width: 350px;
+  height: 80px;
+  background: url("../images/icon.svg") no-repeat center;
+  font: 0/0 a;
+  text-shadow: none;
+  color: transparent;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}*/
 
 /* ------------------------------------------------------------------- 
  * menu trigger - (_layout.css) 
