--- a/css/main.css
+++ b/css/main.css
@@ -1504,9 +1504,9 @@ header .header-logo a {
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 768px) {
   header .header-logo a {
-    width: 51px;
-    height: 24px;
-    background-size: 51px 24px;
+    width: 311px;
+    height: 66px;
+/*    background-size: 51px 24px;*/
   }
 }
 @media only screen and (max-width: 400px) {
