--- a/css/main.css
+++ b/css/main.css
@@ -1258,6 +1258,7 @@ header .header-logo a {
   -ms-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+
 /*.main-icon {
   top: 9px;
   height: 90px;
@@ -2831,6 +2832,7 @@ footer h4.h05 {
 }
 footer h4.h05::after {
   display: block;
+  background: url("../images/icon.svg") no-repeat center;
   content: "";
   width: 100px;
   height: 1px;
@@ -2838,6 +2840,12 @@ footer h4.h05::after {
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+ .btm-logo {
+  background: url("../images/icon.svg") no-repeat center;
+  width: 60px;
+  height: 58px;
 }
 
 /* footer main
