content updates, remove contact form
added in Square Appointments button

--- a/css/main.css
+++ b/css/main.css
@@ -1967,7 +1967,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 #services .services-list .h05 {
   font-size: 2.4rem;
   line-height: 1.765;
-  color: #FFFFFF;
+  color: #eab025;
   margin-bottom: 3rem;
 }
 
@@ -2506,6 +2506,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   color: #FFFFFF;
   z-index: 600;
   position: relative;
+  text-align: center;
 }
 .contact-content h5 {
   color: #FFFFFF;
@@ -2521,149 +2522,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin-bottom: 4.2rem;
 }
 
-/* contact form */
-#contact form {
-  margin-top: 0;
-  margin-bottom: 3rem;
-}
-#contact form .form-field {
-  position: relative;
-}
-#contact form .form-field:before, #contact form .form-field:after {
-  content: "";
-  display: table;
-}
-#contact form .form-field:after {
-  clear: both;
-}
-#contact form .form-field label {
-  font-family: "montserrat-bold", sans-serif;
-  font-size: 1rem;
-  line-height: 1.4;
-  position: absolute;
-  bottom: 1.5rem;
-  right: 0;
-  text-transform: uppercase;
-  letter-spacing: .05rem;
-  padding: .6rem 2rem .6rem 2rem;
-  margin: 0;
-  color: #000000;
-  background: #f9a828;
-  border-radius: 3px;
-}
-#contact form .form-field label::after {
-  position: absolute;
-  right: 15px;
-  top: 1px;
-  margin-top: -6px;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #f9a828;
-  content: "";
-}
-#contact form ::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-#contact form :-moz-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-  /* Firefox 18- */
-}
-#contact form ::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-  /* Firefox 19+ */
-}
-#contact form :-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-#contact form .placeholder {
-  color: rgba(255, 255, 255, 0.3) !important;
-}
-
-#contact input[type="text"],
-#contact input[type="password"],
-#contact input[type="email"],
-#contact textarea {
-  width: 100%;
-  color: rgba(255, 255, 255, 0.6);
-  margin-bottom: 3.6rem;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-#contact input[type="text"]:focus,
-#contact input[type="password"]:focus,
-#contact input[type="email"]:focus {
-  color: #FFFFFF;
-}
-
-#contact textarea {
-  min-height: 21rem;
-  padding: 1.8rem 2rem;
-}
-#contact textarea:focus {
-  color: #FFFFFF;
-}
-
-#contact button.submitform {
-  font-size: 1.5rem;
-  display: block;
-  letter-spacing: .2rem;
-  height: 6rem;
-  line-height: 6rem;
-  padding: 0 3rem;
-  width: 100%;
-  background: #f9a828;
-  color: #000000;
-  margin-top: .6rem;
-}
-#contact button.submitform:hover, #contact button.submitform:focus {
-  background: #f89e0f;
-}
-
-#message-warning, #message-success {
-  display: none;
-  background: #000000;
-  padding: 3rem;
-  margin-bottom: 3.6rem;
-  width: 100%;
-}
-
-#message-warning {
-  color: #D32B2E;
-}
-
-#message-success {
-  color: #f9a828;
-}
-
-#message-warning i,
-#message-success i {
-  margin-right: 10px;
-}
-
-/* form loader */
-#submit-loader {
-  display: none;
-  position: relative;
-  left: 0;
-  top: 1.8rem;
-  width: 100%;
-  text-align: center;
-  margin-bottom: 4.2rem;
-}
-#submit-loader .text-loader {
-  display: none;
-  font-family: "montserrat-bold", sans-serif;
-  font-size: 1.4rem;
-  color: #FFFFFF;
-  letter-spacing: .2rem;
-  text-transform: uppercase;
-}
-
-.oldie #submit-loader .s-loader {
-  display: none;
-}
-.oldie #submit-loader .text-loader {
-  display: block;
+.contact-info .cinfo p {
+  font-size: 2rem;
 }
 
 /* --------------------------------------------------------------- 
