content for phone

--- a/css/main.css
+++ b/css/main.css
@@ -2528,6 +2528,9 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 .schedule-code {
   padding-bottom: 80px;
 }
+.grind {
+
+}
 /* --------------------------------------------------------------- 
  * loader animation - (_layout.scss)
  * --------------------------------------------------------------- */
